[gd_scene load_steps=4 format=2]

[ext_resource path="res://Battle/HUD/CustomWindow/CustomWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://Battle/HUD/HUD.gd" type="Script" id=2]
[ext_resource path="res://Battle/HUD/PlayerHealth.tscn" type="PackedScene" id=5]

[node name="HUD" type="Node2D"]
z_index = 50
script = ExtResource( 2 )

[node name="PlayerHealthBox" parent="." instance=ExtResource( 5 )]

[node name="CustomWindow" parent="." instance=ExtResource( 1 )]

[connection signal="custom_finished" from="CustomWindow" to="." method="_on_CustomWindow_custom_finished"]
